fix(ac-panel): Panel popper overflow container based on the bounded element

--- a/src/components/molecules/ac-select/ac-select.scss
+++ b/src/components/molecules/ac-select/ac-select.scss
@@ -86,4 +86,4 @@ ac-select {
 // List's Scrollbar theming
 // --------------------------------------------------
 
-@include scrollbar("ac-select ul.ac-select__list");
+@include scrollbar("ul.ac-select__list");
